objects/Engagement__c.object
<CustomObject><fields>
        <fullName>ACF_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Business Org related to the engagement</inlineHelpText>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Business Organization, Administrative, Household Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Biography__c</fullName>
        <inlineHelpText>Biography data related to the engagement</inlineHelpText>
        <label>Biography</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>BEE Program Offering</value>
            </filterItems>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Event</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagements</relationshipLabel>
        <relationshipName>Engagements</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Dean__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dean</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.hed__Primary_Organization__c</field>
                <operation>startsWith</operation>
                <value>Babson</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Engagements (Dean)</relationshipLabel>
        <relationshipName>Engagements1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>ACF_Dean_s_Acknowledgement__c</fullName>
        <label>Dean's Acknowledgement</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ACF_Engagement_Interests__c</fullName>
        <label>Engagement Interests</label>
        <picklist>
            <picklistValues>
                <fullName>Classroom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Entrepreneuship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leadership</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Impact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Women</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accounting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Centers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Diversity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Talent Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD1</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>TBD2</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Engagement_Priority__c</fullName>
        <label>Engagement Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Med</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_Engagement_Type__c</fullName>
        <label>Engagement Type</label>
        <picklist>
            <picklistValues>
                <fullName>Award recipient</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blogger/Contributor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Classroom Guest Speaker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Host</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Experiential_Learning_Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry Captain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Informational_Interviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Judge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keynote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mock Interviewer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Moderator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panelist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Participant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recruiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speaker/Presenter</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>ACF_Information_to_provide_to_Dean__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Information to provide to Dean?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>ACF_Inquiry_Received_by__c</fullName>
        <inlineHelpText>Who received initial call/email from this person/organization</inlineHelpText>
        <label>Inquiry Received by</label>
        <type>TextArea</type>
    </fields><fields>
        <fullName>ACF_Notes__c</fullName>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>ACF_Status_of_Engagement__c</fullName>
        <label>Status of Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospect Inactive</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>ACF_View__c</fullName>
        <formula>HYPERLINK("/"+Id, "View")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Represent a person's engagement with Babson that is not connected to money. 

Eg., A person expresses interest in speaking in a program / past participant wins an award relative to a Babson program; both could be logged as an engagement.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>Engagement</label><nameField>
        <displayFormat>E-{0000000000}</displayFormat>
        <label>Engagement ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Engagements</pluralLabel><sharingModel>ReadWrite</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <columns>ACF_View__c</columns>
        <columns>ACF_Account__c</columns>
        <columns>ACF_Contact__c</columns>
        <columns>ACF_Engagement_Interests__c</columns>
        <columns>ACF_Engagement_Type__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>ACF_Status_of_Engagement__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews><recordTypes>
        <fullName>Engagement</fullName>
        <active>true</active>
        <label>Engagement</label>
    </recordTypes><recordTypes>
        <fullName>Prospective_Engagement</fullName>
        <active>true</active>
        <description>Represents future potential engagement; can also track the person's expressed interest in engaging with Babson</description>
        <label>Prospective Engagement</label>
    </recordTypes></CustomObject>